<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/item_eight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        android:paddingBottom="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView_moon_phase_eight_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            tools:text="0.3"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView_moon_phase_eight_icon"
            app:layout_constraintStart_toEndOf="@+id/imageView_moon_phase_eight_icon"
            app:layout_constraintTop_toTopOf="@+id/imageView_moon_phase_eight_icon" />

        <TextView
            android:id="@+id/textView_moon_rise_eight_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            tools:text="06:00"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView_moon_rise_eight_icon"
            app:layout_constraintStart_toEndOf="@+id/imageView_moon_rise_eight_icon"
            app:layout_constraintTop_toTopOf="@+id/imageView_moon_rise_eight_icon" />

        <TextView
            android:id="@+id/textView_night_temp_eight_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:rotation="0"
            android:textSize="11sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/guideline15_eight"
            app:layout_constraintTop_toBottomOf="@+id/textView_eve_temp_eight_value"
            tools:text="Night" />

        <TextView
            android:id="@+id/textView_mor_temp_eight_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="4dp"
            android:rotation="0"
            android:textSize="11sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/guideline15_eight"
            app:layout_constraintTop_toBottomOf="@+id/divider3_eight"
            tools:text="Mor" />

        <View
            android:id="@+id/divider2_eight"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_marginStart="4dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintBottom_toBottomOf="@+id/textView_min_temp_eight"
            app:layout_constraintStart_toEndOf="@+id/textView_min_temp_eight"
            app:layout_constraintTop_toTopOf="@+id/textView_min_temp_eight" />

        <TextView
            android:id="@+id/textView_max_temp_eight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/divider2_eight"
            app:layout_constraintStart_toEndOf="@+id/divider2_eight"
            app:layout_constraintTop_toTopOf="@+id/divider2_eight"
            tools:text="+33" />

        <TextView
            android:id="@+id/textView_min_temp_eight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/textView_city_country_eight"
            app:layout_constraintStart_toStartOf="@+id/guideline15_eight"
            app:layout_constraintTop_toTopOf="@+id/textView_city_country_eight"
            tools:text="-77" />

        <ImageView
            android:id="@+id/imageView_sunset_eight_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="4dp"
            android:contentDescription="@string/sunset_icon"
            android:src="@drawable/ic_sunset"
            app:layout_constraintBottom_toBottomOf="@+id/textView_sunset_eight_value"
            app:layout_constraintEnd_toStartOf="@+id/textView_sunset_eight_value"
            app:layout_constraintTop_toTopOf="@+id/textView_sunset_eight_value"
            app:tint="#EC6F4D" />

        <TextView
            android:id="@+id/textView_sunrise_eight_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView_sunrise_eight_icon"
            app:layout_constraintStart_toEndOf="@+id/imageView_sunrise_eight_icon"
            app:layout_constraintTop_toTopOf="@+id/imageView_sunrise_eight_icon"
            tools:text="06:00" />

        <TextView
            android:id="@+id/textView_sunset_eight_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageView_uv_icon_eight"
            app:layout_constraintTop_toBottomOf="@+id/textView_description_eight_value"
            tools:text="06:00" />

        <ImageView
            android:id="@+id/imageView_sunrise_eight_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/sunrise_icon"
            android:src="@drawable/ic_sunrise"
            app:layout_constraintBottom_toBottomOf="@+id/imageView_uv_icon_eight"
            app:layout_constraintEnd_toStartOf="@+id/imageView_uv_icon_eight"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView_uv_icon_eight"
            app:tint="#EC6F4D" />

        <TextView
            android:id="@+id/textView_city_country_eight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="8dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:singleLine="true"
            android:textAlignment="viewStart"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView_icon_eight"
            app:layout_constraintEnd_toStartOf="@+id/textView_min_temp_eight"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView_icon_eight"
            tools:text="London, GB" />

        <TextView
            android:id="@+id/textView_day_temp_eight_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:rotation="0"
            android:textSize="11sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/guideline15_eight"
            app:layout_constraintTop_toBottomOf="@+id/textView_mor_temp_eight_value"
            tools:text="Day" />

        <TextView
            android:id="@+id/textView_eve_temp_eight_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:rotation="0"
            android:textSize="11sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/guideline15_eight"
            app:layout_constraintTop_toBottomOf="@+id/textView_day_temp_eight_value"
            tools:text="Eve" />

        <TextView
            android:id="@+id/textView_description_eight_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:textSize="11sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textView_day_temp_feels_eight_value"
            app:layout_constraintTop_toBottomOf="@+id/textView_day_temp_feels_eight_value"
            tools:text="Clouds" />

        <ImageView
            android:id="@+id/imageView_icon_eight"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:adjustViewBounds="false"
            android:contentDescription="@string/weather_condition_icon"
            android:scaleType="centerInside"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/img" />

        <TextView
            android:id="@+id/textView_date_eight_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/guideline15_eight"
            app:layout_constraintTop_toTopOf="@+id/textView_temp_eight_value"
            tools:text="Thu, 6 Jan 2022" />

        <View
            android:id="@+id/divider3_eight"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="4dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="@+id/textView_date_eight_value"
            app:layout_constraintStart_toStartOf="@+id/textView_date_eight_value"
            app:layout_constraintTop_toBottomOf="@+id/textView_date_eight_value" />

        <TextView
            android:id="@+id/textView_temp_eight_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="48sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_city_country_eight"
            app:layout_constraintVertical_chainStyle="spread_inside"
            tools:text="+28" />

        <TextView
            android:id="@+id/textView_wind_value_eight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView_wind_icon_eight"
            app:layout_constraintStart_toEndOf="@+id/imageView_wind_icon_eight"
            app:layout_constraintTop_toTopOf="@+id/imageView_wind_icon_eight"
            tools:text="wind" />

        <ImageView
            android:id="@+id/imageView_humidity_icon_eight"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/humidity_icon"
            android:src="@drawable/ic_wi_humidity"
            app:layout_constraintEnd_toEndOf="@+id/imageView_sunset_eight_icon"
            app:layout_constraintStart_toStartOf="@+id/imageView_sunset_eight_icon"
            app:layout_constraintTop_toBottomOf="@+id/imageView_sunset_eight_icon"
            app:tint="#0091EA" />

        <TextView
            android:id="@+id/textView_humidity_eight_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView_humidity_icon_eight"
            app:layout_constraintStart_toEndOf="@+id/imageView_humidity_icon_eight"
            app:layout_constraintTop_toTopOf="@+id/imageView_humidity_icon_eight"
            tools:text="35%" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline15_eight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <ImageView
            android:id="@+id/imageView_pressure_icon_eight"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/atmospheric_pressure_icon"
            android:src="@drawable/ic_wi_barometer"
            app:layout_constraintEnd_toEndOf="@+id/imageView_sunrise_eight_icon"
            app:layout_constraintStart_toStartOf="@+id/imageView_sunrise_eight_icon"
            app:layout_constraintTop_toBottomOf="@+id/imageView_sunrise_eight_icon"
            app:tint="#00C853" />

        <TextView
            android:id="@+id/textView_pressure_eight_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView_pressure_icon_eight"
            app:layout_constraintStart_toEndOf="@+id/imageView_pressure_icon_eight"
            app:layout_constraintTop_toTopOf="@+id/imageView_pressure_icon_eight"
            tools:text="978hpa" />

        <ImageView
            android:id="@+id/imageView_uv_icon_eight"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:padding="1.5dp"
            android:src="@drawable/uvi_new"
            app:layout_constraintBottom_toBottomOf="@+id/textView_sunset_eight_value"
            app:layout_constraintEnd_toStartOf="@+id/textView_sunset_eight_value"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageView_sunrise_eight_icon"
            app:layout_constraintTop_toTopOf="@+id/textView_sunset_eight_value"
            app:tint="#FFD600"
                android:contentDescription="@string/uv" />

        <TextView
            android:id="@+id/textView_uv_eight_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/uv"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView_uv_icon_eight"
            app:layout_constraintStart_toEndOf="@+id/imageView_uv_icon_eight"
            app:layout_constraintTop_toTopOf="@+id/imageView_uv_icon_eight" />

        <ImageView
            android:id="@+id/imageView_moon_set_eight_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/imageView_pressure_icon_eight"
            app:layout_constraintStart_toStartOf="@+id/imageView_pressure_icon_eight"
            app:layout_constraintTop_toBottomOf="@+id/imageView_pressure_icon_eight"
            app:srcCompat="@drawable/ic_moonset"
            app:tint="@color/grey"
                android:contentDescription="@string/moonset" />

        <ImageView
            android:id="@+id/imageView_moon_rise_eight_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/imageView_humidity_icon_eight"
            app:layout_constraintStart_toStartOf="@+id/imageView_humidity_icon_eight"
            app:layout_constraintTop_toBottomOf="@+id/imageView_humidity_icon_eight"
            app:srcCompat="@drawable/ic_moonrise"
            app:tint="@color/grey"
                android:contentDescription="@string/moon_rise" />

        <ImageView
            android:id="@+id/imageView_moon_phase_eight_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/imageView_wind_icon_eight"
            app:layout_constraintEnd_toStartOf="@+id/guideline15_eight"
            app:layout_constraintStart_toStartOf="@+id/imageView_wind_icon_eight"
            app:layout_constraintTop_toBottomOf="@+id/imageView_wind_icon_eight"
            app:srcCompat="@drawable/ic_moon_phase"
            app:tint="@color/yellow"
                android:contentDescription="@string/moon_phase" />

        <TextView
            android:id="@+id/textView_moon_set_eight_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            tools:text="06:00"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView_moon_set_eight_icon"
            app:layout_constraintStart_toEndOf="@+id/imageView_moon_set_eight_icon"
            app:layout_constraintTop_toTopOf="@+id/imageView_moon_set_eight_icon" />

        <TextView
            android:id="@+id/textView_day_temp_feels_eight_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            tools:text="feels like"
            android:textSize="11sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_temp_eight_value" />

        <ImageView
            android:id="@+id/imageView_wind_icon_eight"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="8dp"
            app:tint="#00B8D4"
            app:layout_constraintEnd_toEndOf="@+id/imageView_uv_icon_eight"
            app:layout_constraintStart_toStartOf="@+id/imageView_uv_icon_eight"
            app:layout_constraintTop_toBottomOf="@+id/imageView_uv_icon_eight"
            app:srcCompat="@drawable/ic_wind"
                android:contentDescription="@string/wind_icon" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>