<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="mii.weather.MainActivity">

    <TextView
            android:id="@+id/title_app"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:minHeight="?actionBarSize"
            android:singleLine="true"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
            android:textColor="@color/teal_700"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/guideline11"
            app:layout_constraintStart_toEndOf="@+id/imageView_logo_on_bar"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:id="@+id/title_quote"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:minHeight="?actionBarSize"
            android:singleLine="true"
            android:text="@string/quot_after_a_storm_comes_a_calm_quot"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
            android:textColor="@color/teal_700"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/appBarLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline14"
            app:layout_constraintTop_toTopOf="parent" />

    <ImageView
            android:id="@+id/imageView_logo_on_bar"
            android:layout_width="48dp"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/title_app"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/title_app"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/mii_logo"
            android:contentDescription="@string/app_logo" />

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/appBarLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:textAlignment="center"
            android:theme="@style/Theme.MiiWeather.AppBarOverlay"
            app:elevation="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_app">

        <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/view_pager"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                app:layout_constraintBottom_toTopOf="@+id/tabs"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

        </androidx.viewpager2.widget.ViewPager2>

        <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabs"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/layout_cards_bottom_bg"
                android:theme="@style/Animation.Design.BottomSheetDialog"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:tabGravity="fill"
                app:tabIndicator="@null"
                app:tabIndicatorAnimationMode="elastic"
                app:tabIndicatorFullWidth="false"
                app:tabIndicatorGravity="center"
                app:tabInlineLabel="false"
                app:tabMode="fixed"
                app:tabSelectedTextColor="#757575"
                app:tabTextAppearance="@style/TextAppearance.AppCompat.Body2"
                app:tabTextColor="@android:color/secondary_text_dark_nodisable" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.45" />

    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.48" />

</androidx.constraintlayout.widget.ConstraintLayout>